# Haven

./: .gitignore  README.md  package-lock.json  package.json
apps/api/: pyproject.toml
apps/api/app/: main.py
apps/api/app/agents/: session_manager.py  tool_registry.py
apps/api/app/agents/prompts/: escalation_rules.txt  safety_prompt.txt  system_prompt.txt
apps/api/app/agents/tool_handlers/: call_emergency_contact.py  execute_computer_task.py  explain_why_alerted.py  get_active_alerts.py  open_evacuation_page.py  read_official_guidance.py  update_monitoring_preferences.py
apps/api/app/core/: config.py  errors.py  logging.py
apps/api/app/db/repositories/: action_repository.py  alert_repository.py  place_repository.py  user_repository.py
apps/api/app/integrations/: livekit_token_client.py  nws_client.py  openai_realtime_client.py  openclaw_client.py  twilio_client.py
apps/api/app/routes/: actions.py  alerts.py  contacts.py  events.py  health.py  livekit.py  places.py  preferences.py  sessions.py  voice.py  watchtower.py  workers.py
apps/api/app/schemas/: actions.py  alerts.py  contacts.py  places.py  preferences.py  voice.py
apps/api/app/services/: alert_classifier.py  alert_deduper.py  alert_fetcher.py  alert_matcher.py  alert_normalizer.py  livekit_service.py  official_guidance_service.py  session_service.py  status_event_service.py  summary_service.py  worker_registry_service.py
apps/api/app/ws/: manager.py
apps/api/sql/: schema.sql
apps/api/tests/: test_e2e_flow.py  test_voice_session.py
apps/backend/api/: .env.example  main.py  requirements.txt
apps/backend/openclaw/: package.json
apps/openclaw-gateway/: README.md  pyproject.toml
apps/openclaw-gateway/app/: browser.py  config.py  main.py  openclaw.py  registration.py
apps/openclaw-gateway/app/routes/: execute.py  health.py  screen.py
apps/openclaw-gateway/app/tools/: click.py  execute_task.py  open_url.py  search.py  take_screenshot.py  type_text.py
apps/openclaw-gateway/static/: screen.html
apps/openclaw-gateway/tests/: test_gateway.py
apps/simulator/scenarios/: conflicting-signals.json  (+2 more)
apps/voice-agent/: package.json
apps/web/: index.html  package.json  vite.config.ts
apps/worker/: pyproject.toml
apps/worker/src/: main.py  settings.py
apps/worker/src/jobs/: _normalizer.py  expire_old_alerts.py  notify_users.py  poll_official_alerts.py  poll_tweets.py
backend/api/: .env.example  package.json
docs/: alert-lifecycle 2.md  architecture.md  voice-flow 2.md
(+48 files in other folders)
