[tool.poetry]
name = "haven-api"
version = "0.1.0"
description = "Haven — alert intelligence, voice agent, action execution"
authors = ["Haven Team"]
python = "^3.11"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.110.0"
uvicorn = {extras = ["standard"], version = ">=0.27.0"}
pydantic = ">=2.6.0"
pydantic-settings = ">=2.2.0"
supabase = ">=2.4.0"
httpx = ">=0.27.0"
openai = ">=1.14.0"
twilio = ">=8.0.0"
python-dotenv = ">=1.0.0"
sse-starlette = ">=1.8.0"
python-multipart = ">=0.0.9"
livekit-api = ">=0.7.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=8.0.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
