[tool.poetry]
name = "haven-openclaw-gateway"
version = "0.3.0"
description = "Thin HTTP bridge between Haven API and OpenClaw. Forwards instructions, does not control browsers."
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
"uvicorn[standard]" = "^0.34.0"
httpx = "^0.28.0"
pydantic-settings = "^2.7.0"
python-dotenv = "^1.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-asyncio = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
